force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <description>An object for housing recruitment and academic interest records.</description>
    <label>Plan</label>
    <nameField>
        
        <label>Plan Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>