force-app/main/default/objects/Plan__c/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <description>The Career that the record belongs to (Ex: Undergraduate).</description>
    <inlineHelpText>Select a Career for the record.</inlineHelpText>
    <label>Career</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Undergraduate</fullName>
                
                
                    <label>Undergraduate</label>
                
                </value>
            
                <value>
                
                    <fullName>Graduate</fullName>
                
                
                    <label>Graduate</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>