force-app/main/default/objects/Plan__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <description>The Degree of the record (Ex: BS, BA, etc.).</description>
    <inlineHelpText>Select a Degree for the record.</inlineHelpText>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>BA</fullName>
                
                
                    <label>BA</label>
                
                </value>
            
                <value>
                
                    <fullName>BS</fullName>
                
                
                    <label>BS</label>
                
                </value>
            
                <value>
                
                    <fullName>MA</fullName>
                
                
                    <label>MA</label>
                
                </value>
            
                <value>
                
                    <fullName>MS</fullName>
                
                
                    <label>MS</label>
                
                </value>
            
                <value>
                
                    <fullName>MBA</fullName>
                
                
                    <label>MBA</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>