force-app/main/default/objects/Plan__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to Account to connect the record to the Account hierarchy for departments, schools, and/or colleges. Filter criteria of Record Type = University Department.</description>
    <inlineHelpText>Enter the departmental account (i.e. School of Business) this record belongs to.</inlineHelpText>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>