force-app/main/default/objects/Plan__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>The type of Plan such as a Major, Minor, etc.</description>
    <inlineHelpText>Select a Plan Type for the Plan.</inlineHelpText>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Major</fullName>
                
                
                    <label>Major</label>
                
                </value>
            
                <value>
                
                    <fullName>Minor</fullName>
                
                
                    <label>Minor</label>
                
                </value>
            
                <value>
                
                    <fullName>Certificate</fullName>
                
                
                    <label>Certificate</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>