force-app/main/default/objects/Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tracks whether it is a recruitment or academic record for use in lookup filters on Lead, Opportunity, Interaction, and Plan. If record types are created, the lookup filters could be updated and this field would no longer be needed.</description>
    <inlineHelpText>Track whether it is a recruitment or academic record for use in lookup filters on Lead, Opportunity, Interaction, and Plan.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Recruitment</fullName>
                
                
                    <label>Recruitment</label>
                
                </value>
            
                <value>
                
                    <fullName>Academic</fullName>
                
                
                    <label>Academic</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>