force-app/main/default/objects/Plan__c/listViews/Academic_Interests.listView-meta.xml
<ListView>
    <fullName>Academic_Interests</fullName>
    <columns>NAME</columns>
    <columns>Career__c</columns>
    <columns>Department__c</columns>
    <columns>Active__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Recruitment_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>Type__c</field>
        
            <operation>equals</operation>
        
            <value>Academic</value>
        
        </filters>
    <label>Academic Interests</label>
</ListView>