force-app/main/default/objects/Plan__c/listViews/Recruitment_Interests.listView-meta.xml
<ListView>
    <fullName>Recruitment_Interests</fullName>
    <columns>NAME</columns>
    <columns>Career__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>Type__c</field>
        
            <operation>equals</operation>
        
            <value>Recruitment</value>
        
        </filters>
    <label>Recruitment Interests</label>
</ListView>